# oxocarbon-vscode

./: .gitignore  .vscodeignore  Cargo.toml  Makefile  README.md  flake.nix  oxocarbon.toml  package.json  result
assets/: Preferences.sublime-settings  extensions.txt  keybindings.json  settings-zed.json  settings.json  todo.json
dev/: Cargo.toml
intellij/: PRINT.icls  oxocarbon-color-theme.icls  oxocarbon-compat-color-theme.icls  oxocarbon-mono-color-theme.icls  oxocarbon-mono-compat-color-theme.icls  oxocarbon-oled-color-theme.icls  oxocarbon-oled-compat-color-theme.icls  oxocarbon-oled-mono-color-theme.icls  oxocarbon-oled-mono-compat-color-theme.icls
json2st/: Cargo.toml
json2st/src/: main.rs
json2st/src/test/: oxocarbon.sublime-theme  oxocarbon_oled_compatibility.sublime-theme
json2tm/: Cargo.toml  README.md
json2tm/src/: main.rs
json2xccolor/: Cargo.toml
json2xccolor/src/: main.rs
oxocarbon-utils/: Cargo.toml
scripts/: bench.sh  benchneon.py  patch-cursor-marketplace.sh  vsc.sh
src/: main.rs  ramp.rs
textmate/: PRINT.tmTheme  oxocarbon-color-theme.tmTheme  oxocarbon-compat-color-theme.tmTheme  oxocarbon-mono-color-theme.tmTheme  oxocarbon-mono-compat-color-theme.tmTheme  oxocarbon-oled-color-theme.tmTheme  oxocarbon-oled-compat-color-theme.tmTheme  oxocarbon-oled-mono-color-theme.tmTheme  oxocarbon-oled-mono-compat-color-theme.tmTheme
themes/: Oxocarbon-color-theme.json  PRINT.json  oxocarbon-color-theme.json  oxocarbon-compat-color-theme.json  oxocarbon-mono-color-theme.json  oxocarbon-mono-compat-color-theme.json  oxocarbon-mono-oled-color-theme.json  oxocarbon-mono-oled-compat-color-theme.json  oxocarbon-oled-color-theme.json  oxocarbon-oled-compat-color-theme.json  oxocarbon-oled-mono-color-theme.json  oxocarbon-zed.json  test  (+1 more)
(+26 files in other folders)
