[package]
name = "oxocarbon-themec"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Compiler for the oxocarbon VSCode theme"
repository = "https://github.com/nyoom-engineering/oxocarbon-vscode"

[dependencies]
toml = "0.8"
serde_json = "1.0"
oxocarbon-utils = { path = "./oxocarbon-utils" }

[profile.release]
codegen-units = 1
lto = true
strip = true
