[package]
name = "json2st"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Convert VSCode theme JSON from stdin to Sublime .sublime-theme on stdout"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxocarbon-utils = { path = "../oxocarbon-utils" }