[package]
name = "json2tm"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
json_comments = "0.2"
plist = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
oxocarbon-utils = { path = "../oxocarbon-utils" }

[profile.release]
codegen-units = 1
lto = true
strip = true